netfilx-prototype.html

--- a/netfilx-prototype.html
+++ b/netfilx-prototype.html
@@ -28,7 +28,7 @@
         <details>
             <summary>Season 2 Trailer</summary>
             <video controls width="400" height="200">
-                <source src="./video/season2.mp4">
+                <source src="https://www.youtube.com/watch?v=fR5_orbIkTc">
             </video>
         </details>
         <details>
